# acr

./: .gitignore  README.md  poetry.bak  pyproject.toml  setup.py  test_deciles.py  video_utils.py
acr/: __init__.py  a9_utils.py  acr_utils_retired.py  basic_info.py  data_agg.py  dlc.py  duplication_functions.py  fp.py  hypnogram_utils.py  info_pipeline.py  io.py  mua.py  nor.py  off_data_pipeline.py  onoff.py  onoffmua.py  pl_units.py  plots.py  rec_quality_pipeline.ipynb  spoff.py  stats.py  stim.py  subjects.py  sync.py  tests.ipynb  todo.txt  units.py  utils.py
acr.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt
acr_mod/: acr_info.py  acr_plots.py  subjects.py
martinotti_analyses/: mart_inhibition.ipynb
martinotti_inhib_notebooks/: process_lfps_and_mua.ipynb  process_single_exp.py
misc_analysis/: signal_inventory.ipynb
notebooks/: 13_14_processing.ipynb  ACR_10_11.ipynb  ACR_9.ipynb  a14_spikes.ipynb  acplt.mplstyle  acr_13.ipynb  acr_13_14.ipynb  acr_plots.mplstyle  cfg.yml  config_file_gen.ipynb  control1-EEGr.nc  cuda_df.ipynb  data_range.ipynb  data_saver.ipynb  ectest.ipynb  hypno-scratch.ipynb  hypno_viz.ipynb  imports.yml  pi_in_wake.ipynb  pi_in_wake.qmd  scratch.ipynb  si_scratch.ipynb  si_times.ipynb  sleep_decline.ipynb  sleep_mon.ipynb  spike_processing.ipynb  spike_scratch.ipynb  test.csv  test2.htsv  times.ipynb  times.py  times13.py  ty.yml  yaml_pipeline.ipynb  yml.ipynb
processing_scripts/: mua_spike_detection_sequential.py  prepro_mua_sequential.py  prepro_mua_single_sub-exp.py  sub-rec-probe_mua-detection.py  trim_and_delete_long_recording.ipynb
pub/: delta-hypno_traces.ipynb  fr_reduction_info.parquet  molecular_summary.ipynb  plot_lab.ipynb  stim_averaged_field_potentials.ipynb  swa_figs.ipynb  swa_gen.ipynb  swa_induction_summary.ipynb  swa_rebound_summary.ipynb  swi_raw_ACR.ipynb  swi_raw_SOM.ipynb  swisin_raw_ACR.ipynb  template.ipynb
setup_tools/: setup.py  version.py
spike_sorting/: ACR_14-laser1-NNXr.py  ACR_14-short-iso-NNXo.py  ACR_14-short-iso-NNXr.py  (+16 more)
(+255 files in other folders)
