[tool.poetry]
name = "acr"
version = "0.1.0"
description = "All analyses for ACR-inhibition project"
authors = ["Kort Driessen <driessenkort@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.12"
pandas = "^1.4.3"
xarray = "^2022.6.0"
jupyterlab = "^3.4.5"
plotly = "^5.10.0"
seaborn = "^0.11.2"
streamlit = "^1.12.2"
ipympl = "^0.9.2"
spikeinterface = {git = "https://github.com/CSC-UW/spikeinterface.git", rev = "wisc/dev"}
PyYAML = "^6.0"
kdephys = {path = "../kdephys/", develop = true}
ecephys = {path = "../ecephys/", develop = true}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
