[tool.poetry]
name = "acr"
version = "0.1.0"
description = "All analyses for ACR-inhibition project"
authors = ["Kort Driessen <driessenkort@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.12"
kdephys = {path = "../kdephys/", develop = true}
ecephys = {path = "../ecephys/", develop = true}
plotly = "^5.10.0"
streamlit = "^1.12.2"
netCDF4 = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
